# ultimate-product-tracker

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 20250910_0053_2cced2368de9_all_auth_models.py  20250911_2245_daacf258b177_all_auth_models.py  20250916_0041_467f20d3bf6d_all_auth_models.py
app/: main.py
app/api/dependencies/: auth.py
app/api/v1/endpoints/: auth.py
app/core/: config.py  exceptions.py
app/db/: __init__.py  base.py  seed.sql
app/models/: base.py
app/models/auth/: __init__.py  models.py
app/repositories/auth/: __init__.py  protocols.py  repositories.py
app/schemas/: __init__.py
app/schemas/auth/: schemas.py
app/services/: __init__.py
app/services/auth/: service.py
app/services/user/: service.py
app/utils/: security.py
